Updating styling and layout.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>my-first-website</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Kristof's github pages hovedside</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Josefin+Slab&display=swap" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-
-<img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
-
-<!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
+  <div class="container" id="title">
+    <h1>Kristof's github pages hovedside</h1>
+  </div>
+  <div class="container">
+    <h2>Skole prosjekter:</h2>
+    <table id="table1">
+      <tr>
+        <td> <a href="/341/kristof_horvath.html" class="link">/341/kristof_horvath.html</a></td>
+      </tr>
+      <tr>
+        <td><a href="/341/kristof_horvath_uten_css.html" class="link">/341/kristof_horvath_uten_css.html</a></td>
+      </tr>
+    </table>
+  </div>
 
 </body>
+
 </html>
