--- a/341/kristof_horvath.html
+++ b/341/kristof_horvath.html
@@ -24,8 +24,8 @@
             <ul>
                 <li>Programmering: C++ (C98), C#, PHP, Html, CSS, Javascript. </li>
                 <li>Malware og program analyse og reversering (ved bruk av IDA og x86dbg).</li>
-                <li>Netflix, osv.</li>
-                <li>Matlaging</li>
+                <li>Se serier på Netflix, HBO osv.</li>
+                <li>Mat - Sushi, kinesisk, osv.</li>
             </ul>
             <a>På fritiden min for øyeblikket skriver jeg en backend server i node.js med express, som bruker C++ addons. Serveren håndterer innlogginger både gjennom requests fra C++ client-programvare og gjennom nettleserens POST request til en MySQL database.</a>
         </div>
