Oppdaterte readme og la til meta, charset utf8.

--- a/341/kristof_horvath_uten_css.html
+++ b/341/kristof_horvath_uten_css.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
- 
-    <head>
-        <title>341 Lag din første webside!</title>
-    </head>
-    <body>
-            <h1>Hello world!</h1>
-            <h3>En enkel webside om meg, Kristof.</h3><br>
-            <a> Jeg heter Kristof S. H. Horvath og har interesser innen:</a>
-            <ul>
-                <li>Programmering: C++ (C98), C#, PHP, Html, CSS, Javascript. </li>
-                <li>Malware og program analyse og reversering (ved bruk av IDA og x86dbg).</li>
-                <li>Se serier på Netflix, HBO osv.</li>
-                <li>Mat - Sushi, kinesisk, osv.</li>
-            </ul>
-            <a>På fritiden min for øyeblikket skriver jeg en backend server i node.js med express, som bruker C++ addons. Serveren håndterer innlogginger både gjennom requests fra C++ client-programvare og gjennom nettleserens POST request til en MySQL database.</a>
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <title>341 Lag din første webside!</title>
+</head>
+
+<body>
+    <h1>Hello world!</h1>
+    <h3>En enkel webside om meg, Kristof.</h3><br>
+    <a> Jeg heter Kristof S. H. Horvath og har interesser innen:</a>
+    <ul>
+        <li>Programmering: C++ (C98), C#, PHP, Html, CSS, Javascript. </li>
+        <li>Malware og program analyse og reversering (ved bruk av IDA og x86dbg).</li>
+        <li>Se serier på Netflix, HBO osv.</li>
+        <li>Mat - Sushi, kinesisk, osv.</li>
+    </ul>
+    <a>På fritiden min for øyeblikket skriver jeg en backend server i node.js med express, som bruker C++ addons.
+        Serveren håndterer innlogginger både gjennom requests fra C++ client-programvare og gjennom nettleserens POST
+        request til en MySQL database.</a>
+</body>
+
 </html>
