--- a/341/kristof_horvath.html
+++ b/341/kristof_horvath.html
@@ -2,6 +2,7 @@
 <html>
  
     <head>
+        <meta charset="utf-8"/>
         <title>341 Lag din første webside!</title>
         <style>
             body{
