392 ServiceDesk.html, fjernet også filer som ikke er i bruk.

--- a/392/ServiceDesk.html
+++ b/392/ServiceDesk.html
@@ -13,10 +13,12 @@
     <!-- Innledning -->
     <p> I denne opplæringen av GitHub bruker jeg Windows Powershell. Du kan også bruke Git for Windows med de samme
         kommandoene!</p>
+
+    <!-- Steg 1-5, Hvordan sette opp Github pages på Windows 10 -->
     <ul>
         <li>
             <h3>Steg 1: Last ned Git!</h3>
-            <p>Du kan laste Git for windows ved å klikke <a href="https://git-scm.com/download/win">her</a></p>
+            <p>Du kan laste Git for Windows ved å klikke <a href="https://git-scm.com/download/win">her</a></p>
             <!-- Bilde av git nettsiden som starter nedlasting automatisk. -->
             <img src="img/step_1.png"> </img>
             <p>Her vil nedlastingen starte automatisk. Følg installasjonsveiviseren sine instruksjoner.</p>
@@ -30,7 +32,7 @@
                 som er kort for repository. </p>
             <!-- Bilde av filstrukturen i filutforskeren -->
             <img src="img/step_2a.png"> </img>
-            <h4>Steg 2b: Åpne Windows powershell.</h4>
+            <h4>Steg 2b: Åpne Windows Powershell.</h4>
             <p>Hold inne "Shift"-knappen og høyreklikk på mappen du har laget, jeg klikker på mappen som heter
                 "repo".<br>
                 Der vil du se en liste alternativer, du skal klikke på "Åpne Powershell-vinduet her".<br>
@@ -38,7 +40,8 @@
             </p>
             <!-- Bilde av alternativer etter shift-høyre-klikk på mappe -->
             <img src="img/step_2b.png"> </img>
-            <p>Nå vil du se Powershell-vinduet som ser slik ut:</p>
+            <p>Nå vil du se Powershell-vinduet som ser slik ut: <br>
+                (NB! Sjekk at Powershell-vinduet har riktig direktorat. For meg: "D:\Google Drive\VG3\IT1\repo>")</p>
             <img src="img/step_2c.png"> </img>
 
             <h4>Steg 2c: Bruk Git til å lage et nytt repository</h4>
@@ -91,6 +94,17 @@
             </p>
         </li>
 
+        <li>
+            <h3>Steg 5: Set opp GitHub pages!</h3>
+            <p>På siden til repositoriet ditt, klikk "Settings".</p>
+            <img src="img/step_5.png"> </img>
+             <p>Endre navnet på repositoriet ditt til
+                "brukernavn.github.io" hvor du bytter ut brukernavn med brukernavnet ditt. <br>
+                Pass på at repositoriet er offentlig. Nå bør GitHub pages fungere!</p>
+            <p>Gratulerer du har nå klart å sette opp din egne GitHub pages side!
+                Sjekk ved å gå til "brukernavn.github.io", husk å bytte ut brukernavn med ditt eget brukernavn. 
+            </p>
+        </li>
     </ul>
 </body>
 
