Endret navn på fil, la til 392/ServiceDesk.html til index.html

--- a/392/GitHubPagesTutorial.html
+++ b/392/GitHubPagesTutorial.html
@@ -42,6 +42,7 @@
             <img src="img/step_2b.png"> </img>
             <p>Nå vil du se Powershell-vinduet som ser slik ut: <br>
                 (NB! Sjekk at Powershell-vinduet har riktig direktorat. For meg: "D:\Google Drive\VG3\IT1\repo>")</p>
+            <!-- Bilde av Windows Powershell-vinduet -->
             <img src="img/step_2c.png"> </img>
 
             <h4>Steg 2c: Bruk Git til å lage et nytt repository</h4>
@@ -64,6 +65,7 @@
             <img src="img/step_3a.png"> </img>
             <p>Fyll deretter inn "Repository name", her kan du kalle repositoriet det du vil.<br>Trykk deretter "Create
                 repository".</p>
+            <!-- Bilde av Github Create Repository side -->
             <img src="img/step_3b.png"> </img>
         </li>
 
@@ -72,6 +74,7 @@
             <h4>Steg 4a: Finn git url-en din, "Clone or download"</h4>
             <p>På siden til repositoriet ditt, finn den grønne "Clone or download" knappen, klikk på den, deretter
                 kopier lenken.</p>
+            <!-- Bilde av git lenken -->
             <img src="img/step_3c.png"> </img>
             <p>Finn Powershell-vinduet ditt, deretter skriv kommandoen: git remote add origin
                 https://github.com/brukernavn/nettsiden-min.git
@@ -81,6 +84,7 @@
             <p>Skriv kommandoen: git pull origin master<br>Nå har du lastet ned alle filene fra repositoriet ditt.<br>Nå
                 kan du se nettsiden din lokalt ved å åpne html-filer.<br>Bruk en teksteditor, feks Visual Studio Code, å
                 modifiser filene.</p>
+            <!-- Bilde av Windows Powershell-vinduet etter kommando "git pull" -->
             <img src="img/step_4b.png"> </img>
             <h4>Steg 4c: oppdater GitHub repositoriet med dine endringer.</h4>
             <p>Skriv kommandoenne i rekkefølge:<br>
@@ -88,6 +92,7 @@
                 git status<br>
                 git commit -m "Min første commit melding!"<br>
                 git push origin master</p>
+            <!-- Bilde av Windows Powershell-vinduet etter kommandoene -->
             <img src="img/step_4c.png"> </img>
             <p>
                 Nå kan du sjekke GitHub repositoriet ditt, der bør det nå stå at du nettopp oppdaterte filene!
@@ -97,12 +102,13 @@
         <li>
             <h3>Steg 5: Set opp GitHub pages!</h3>
             <p>På siden til repositoriet ditt, klikk "Settings".</p>
+            <!-- Bilde av GitHub repository -->
             <img src="img/step_5.png"> </img>
-             <p>Endre navnet på repositoriet ditt til
+            <p>Endre navnet på repositoriet ditt til
                 "brukernavn.github.io" hvor du bytter ut brukernavn med brukernavnet ditt. <br>
                 Pass på at repositoriet er offentlig. Nå bør GitHub pages fungere!</p>
             <p>Gratulerer du har nå klart å sette opp din egne GitHub pages side!
-                Sjekk ved å gå til "brukernavn.github.io", husk å bytte ut brukernavn med ditt eget brukernavn. 
+                Sjekk ved å gå til "brukernavn.github.io", husk å bytte ut brukernavn med ditt eget brukernavn.
             </p>
         </li>
     </ul>
