--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <tr>
         <td><a href="/341/kristof_horvath_uten_css.html" class="link">/341/kristof_horvath_uten_css.html</a></td>
       </tr>
+      <tr>
+        <td><a href="/392/GitHubPagesTutorial.html" class="link">/392/GitHubPagesTutorial.html</a></td>
+      </tr>
     </table>
   </div>
 
