Endret bilde størrelser, og oppdaterte litt tekst.

--- a/392/GitHubPagesTutorial.html
+++ b/392/GitHubPagesTutorial.html
@@ -20,7 +20,7 @@
             <h3>Steg 1: Last ned Git!</h3>
             <p>Du kan laste Git for Windows ved å klikke <a href="https://git-scm.com/download/win">her</a></p>
             <!-- Bilde av git nettsiden som starter nedlasting automatisk. -->
-            <img src="img/step_1.png"> </img>
+            <img src="img/step_1.png" width="500"> </img>
             <p>Her vil nedlastingen starte automatisk. Følg installasjonsveiviseren sine instruksjoner.</p>
         </li>
 
@@ -31,7 +31,7 @@
                 "repo"<br>
                 som er kort for repository. </p>
             <!-- Bilde av filstrukturen i filutforskeren -->
-            <img src="img/step_2a.png"> </img>
+            <img src="img/step_2a.png" width="500"> </img>
             <h4>Steg 2b: Åpne Windows Powershell.</h4>
             <p>Hold inne "Shift"-knappen og høyreklikk på mappen du har laget, jeg klikker på mappen som heter
                 "repo".<br>
@@ -39,11 +39,11 @@
                 Min datamaskin er konfigurert på engelsk, og derfor står det for meg, "Open Powershell Window here".
             </p>
             <!-- Bilde av alternativer etter shift-høyre-klikk på mappe -->
-            <img src="img/step_2b.png"> </img>
+            <img src="img/step_2b.png" width="500"> </img>
             <p>Nå vil du se Powershell-vinduet som ser slik ut: <br>
                 (NB! Sjekk at Powershell-vinduet har riktig direktorat. For meg: "D:\Google Drive\VG3\IT1\repo>")</p>
             <!-- Bilde av Windows Powershell-vinduet -->
-            <img src="img/step_2c.png"> </img>
+            <img src="img/step_2c.png" width="500"> </img>
 
             <h4>Steg 2c: Bruk Git til å lage et nytt repository</h4>
             <p>Skriv kommandoen: git init</p>
@@ -62,11 +62,12 @@
             <h4>Steg 3b: Lag et GitHub repository. </h4>
             <p>Klikk på den grønne knappen hvor det står "new", oppe i det venstre panelet.</p>
             <!-- Bilde av GitHub hovedside -->
-            <img src="img/step_3a.png"> </img>
-            <p>Fyll deretter inn "Repository name", her kan du kalle repositoriet det du vil.<br>Trykk deretter "Create
-                repository".</p>
+            <img src="img/step_3a.png" width="500"> </img>
+            <p>Fyll deretter inn "Repository name", her kan du kalle repositoriet det du vil.<br>
+                Sjekk at boksen Initialize this repository with a README er krysset av.<br>
+                Trykk deretter "Create repository". <br></p>
             <!-- Bilde av Github Create Repository side -->
-            <img src="img/step_3b.png"> </img>
+            <img src="img/step_3b.png" width="500"> </img>
         </li>
 
         <li>
@@ -75,7 +76,7 @@
             <p>På siden til repositoriet ditt, finn den grønne "Clone or download" knappen, klikk på den, deretter
                 kopier lenken.</p>
             <!-- Bilde av git lenken -->
-            <img src="img/step_3c.png"> </img>
+            <img src="img/step_3c.png" width="500"> </img>
             <p>Finn Powershell-vinduet ditt, deretter skriv kommandoen: git remote add origin
                 https://github.com/brukernavn/nettsiden-min.git
                 Husk å bytte ut URL-en med din egen!.</p>
@@ -85,7 +86,7 @@
                 kan du se nettsiden din lokalt ved å åpne html-filer.<br>Bruk en teksteditor, feks Visual Studio Code, å
                 modifiser filene.</p>
             <!-- Bilde av Windows Powershell-vinduet etter kommando "git pull" -->
-            <img src="img/step_4b.png"> </img>
+            <img src="img/step_4b.png" width="500"> </img>
             <h4>Steg 4c: oppdater GitHub repositoriet med dine endringer.</h4>
             <p>Skriv kommandoenne i rekkefølge:<br>
                 git add<br>
@@ -93,7 +94,7 @@
                 git commit -m "Min første commit melding!"<br>
                 git push origin master</p>
             <!-- Bilde av Windows Powershell-vinduet etter kommandoene -->
-            <img src="img/step_4c.png"> </img>
+            <img src="img/step_4c.png" width="500"> </img>
             <p>
                 Nå kan du sjekke GitHub repositoriet ditt, der bør det nå stå at du nettopp oppdaterte filene!
             </p>
@@ -103,7 +104,7 @@
             <h3>Steg 5: Set opp GitHub pages!</h3>
             <p>På siden til repositoriet ditt, klikk "Settings".</p>
             <!-- Bilde av GitHub repository -->
-            <img src="img/step_5.png"> </img>
+            <img src="img/step_5.png" width="500"> </img>
             <p>Endre navnet på repositoriet ditt til
                 "brukernavn.github.io" hvor du bytter ut brukernavn med brukernavnet ditt. <br>
                 Pass på at repositoriet er offentlig. Nå bør GitHub pages fungere!</p>
