Oppgave 422, Internet og mer om HTML

--- a/392/GitHubPagesTutorial.html
+++ b/392/GitHubPagesTutorial.html
@@ -64,7 +64,7 @@
             <!-- Bilde av GitHub hovedside -->
             <img src="img/step_3a.png" width="500"> </img>
             <p>Fyll deretter inn "Repository name", her kan du kalle repositoriet det du vil.<br>
-                Sjekk at boksen Initialize this repository with a README er krysset av.<br>
+                Sjekk at boksen "Initialize this repository with a README" er krysset av.<br>
                 Trykk deretter "Create repository". <br></p>
             <!-- Bilde av Github Create Repository side -->
             <img src="img/step_3b.png" width="500"> </img>
