La til 422 til hjemmeside, fikset et responsive-layout problem.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <tr>
         <td><a href="/392/GitHubPagesTutorial.html" class="link">/392/GitHubPagesTutorial.html</a></td>
       </tr>
+      <tr>
+          <td><a href="/422/index.html" class="link">/422/InternetOgMerOmHTML.html</a></td>
+        </tr>
     </table>
   </div>
 
