--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
         <td><a href="/392/GitHubPagesTutorial.html" class="link">/392/GitHubPagesTutorial.html</a></td>
       </tr>
       <tr>
-          <td><a href="/422/index.html" class="link">/422/InternetOgMerOmHTML.html</a></td>
-        </tr>
+        <td><a href="/422/index.html" class="link">/422/InternetOgMerOmHTML.html</a></td>
+      </tr>
+      <tr>
+        <td><a href="/461/index-0.html" class="link">/461/Nettside-med-navbar.html</a></td>
+      </tr>
     </table>
   </div>
 
