--- a/461/index-1.html
+++ b/461/index-1.html
@@ -18,13 +18,13 @@
             </li>
             <div>
                 <li class="tab">
-                    <button class="navlink" onclick="location.href = 'index-0.html';" id="default_item">index-0</button>
+                    <button class="navlink" onclick="location.href = 'index-0.html';" id="default_item">Hunder</button>
                 </li>
                 <li class="tab">
-                    <button class="navlink" onclick="location.href = 'index-1.html';" id="default_item">index-1</button>
+                    <button class="navlink" onclick="location.href = 'index-1.html';" id="default_item">Katter</button>
                 </li>
                 <li class="tab">
-                    <button class="navlink" onclick="location.href = 'index-2.html';" id="default_item">index-2</button>
+                    <button class="navlink" onclick="location.href = 'index-2.html';" id="default_item">Piggsvin</button>
                 </li>
             </div>
         </ul>
@@ -34,17 +34,24 @@
         <div class="viewport-section index1">
             <div class="column">
                 <div class="intro">
-                    <h1>Index-1</h1>
-                    <h2>Den andre av tre sider.</h2>
+                    <h1>Katter</h1>
+                    <h2>Felis silvestris catus</h2>
                 </div>
             </div>
             <div class="column">
-                <!-- Lists are inspired by: https://codepen.io/ines/pen/qXrYQO -->
-                <ol class="list">
-                    <li id="item_1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-                    <li id="item_2">Aliquam tincidunt mauris eu risus.</li>
-                    <li id="item_3">Vestibulum auctor dapibus neque.</li>
-                </ol>
+                <div class="content-index1">
+                    <!-- Lists are inspired by: https://codepen.io/ines/pen/qXrYQO -->
+                    <ol class="list">
+                        <li id="item_1">I Norge har vi ca. 750 000 katter.</li>
+                        <li id="item_2">Katter lever vanligvis 13-15 år, men kan bli rundt 20 år gamle.</li>
+                        <li id="item_3">Katter liker å være ute, men ikke i all slags vær. Det er også greit å ha
+                            innekatt så lenge katten får dekket behovet for lek, aktivitet og naturlig atferd.</li>
+                        <p style="padding:1em 0em;background-color:var(--col-acc);">Kilde: <a
+                                style="color:var(--col-acc-hover);"
+                                href="https://www.mattilsynet.no/dyr_og_dyrehold/kjaledyr_og_konkurransedyr/katt/fakta_om_katter.22395">Mattilsynet</a>
+                        </p>
+                    </ol>
+                </div>
             </div>
             <div id="information">
                 <h4>En enkel nettside med navigasjonsbar</h4>
