--- a/461/index-2.html
+++ b/461/index-2.html
@@ -17,13 +17,13 @@
             </li>
             <div>
                 <li class="tab">
-                    <button class="navlink" onclick="location.href = 'index-0.html';" id="default_item">index-0</button>
+                    <button class="navlink" onclick="location.href = 'index-0.html';" id="default_item">Hunder</button>
                 </li>
                 <li class="tab">
-                    <button class="navlink" onclick="location.href = 'index-1.html';" id="default_item">index-1</button>
+                    <button class="navlink" onclick="location.href = 'index-1.html';" id="default_item">Katter</button>
                 </li>
                 <li class="tab">
-                    <button class="navlink" onclick="location.href = 'index-2.html';" id="default_item">index-2</button>
+                    <button class="navlink" onclick="location.href = 'index-2.html';" id="default_item">Piggsvin</button>
                 </li>
             </div>
         </ul>
@@ -32,8 +32,8 @@
     <div class="tabcontent">
         <div class="viewport-section index2">
             <div class="content">
-                <h1>Index-2</h1>
-                <h2>Den siste av tre sider.</h2>
+                <h1>Piggsvin</h1>
+                <h2><i>Erinaceus europaeus</i></h2>
             </div>
             <div id="information">
                 <h4>En enkel nettside med navigasjonsbar</h4>
