--- a/461/index-0.html
+++ b/461/index-0.html
@@ -36,13 +36,13 @@
             </li>
             <div>
                 <li class="tab">
-                    <button class="navlink" onclick="location.href = 'index-0.html';" id="default_item">index-0</button>
+                    <button class="navlink" onclick="location.href = 'index-0.html';" id="default_item">Hunder</button>
                 </li>
                 <li class="tab">
-                    <button class="navlink" onclick="location.href = 'index-1.html';" id="default_item">index-1</button>
+                    <button class="navlink" onclick="location.href = 'index-1.html';" id="default_item">Katter</button>
                 </li>
                 <li class="tab">
-                    <button class="navlink" onclick="location.href = 'index-2.html';" id="default_item">index-2</button>
+                    <button class="navlink" onclick="location.href = 'index-2.html';" id="default_item">Piggsvin</button>
                 </li>
             </div>
         </ul>
@@ -52,8 +52,8 @@
         <div class="viewport-section home" id="home_id">
             <div class="column">
                 <div class="intro">
-                    <h1>Index-0</h1>
-                    <h2>Den første av tre sider.</h2>
+                    <h1>Hunder</h1>
+                    <h2><i>Canis familiaris</i></h2>
                     <a class="button" href="#radios_id">Se andre nettsider</a>
                 </div>
             </div>
@@ -70,22 +70,22 @@
             <div class="radios-wrapper" style="top:150vh;">
                 <form id="radio-form">
                     <label class="container">
-                        <h4>Index-0</h4>
-                        <h3>Radio bokser</h3>
+                        <h4>Hunder</h4>
+                        <h3>Canis familiaris</h3>
                         <input type="radio" name="radio" name="target_url"
                             onchange="if(this.checked){set_target_url('index-0.html');}">
                         <span class="rb"></span>
                     </label>
                     <label class="container">
-                        <h4>Index-1</h4>
-                        <h3>Lister</h3>
+                        <h4>Katter</h4>
+                        <h3>Felis silvestris catus</h3>
                         <input type="radio" name="radio" name="target_url"
                             onchange="if(this.checked){set_target_url('index-1.html');}">
                         <span class="rb"></span>
                     </label>
                     <label class="container">
-                        <h4>Index-2</h4>
-                        <h3>Tabeller</h3>
+                        <h4>Piggsvin</h4>
+                        <h3>Erinaceus europaeus</h3>
                         <input type="radio" name="radio" name="target_url"
                             onchange="if(this.checked){set_target_url('index-2.html');}">
                         <span class="rb"></span>
