Image carousel added, untested.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       <tr>
         <td><a href="/461/index-0.html" class="link">/461/Nettside-med-navbar.html</a></td>
       </tr>
+	  <tr>
+        <td><a href="/img-carousel/index.html" class="link">/img-carousel/ImageCarousel.html</a></td>
+      </tr>
     </table>
   </div>
 
