--- a/img-carousel/index.html
+++ b/img-carousel/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Carousel Maker for Instagram by Kristof S. H. Horvath</title>
-  <link href="/css/styles.css" rel="stylesheet">
+  <link href="/img-carousel/css/styles.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
@@ -188,6 +188,6 @@
     </div>
   </footer>
 
-  <script src="/js/editor.js"></script>
+  <script src="/img-carousel/js/editor.js"></script>
 </body>
 </html>
